--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -2,7 +2,5 @@
     background-color: burlywood;
     height: 100vh;
     width: 100%;
-    color: #2c2c2c;
-    display: flex;
-    justify-content: center;
+    color: #1e1e1e;
 }
