--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -32,7 +32,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    flex-grow: 1; /* Ensures links take remaining space */
+    flex-grow: 1;
+    /* Ensures links take remaining space */
 }
 
 .navbar__links a {
@@ -67,7 +68,8 @@
     display: none;
     position: absolute;
     top: 100%;
-    left: 50%; /* Center horizontally */
+    left: 50%;
+    /* Center horizontally */
     transform: translateX(-50%);
     background-color: white;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
@@ -126,8 +128,10 @@
 
 .navbar__hamburger__menu {
     position: absolute;
-    top: 10vh; /* Adjust as needed */
-    right: 24px; /* Adjust as needed */
+    top: 10vh;
+    /* Adjust as needed */
+    right: 24px;
+    /* Adjust as needed */
     background-color: white;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
     border-radius: 12px;
@@ -144,14 +148,19 @@
 
 .navbar__hamburger__menu ul li {
     margin-bottom: 8px;
+    padding-inline: 8px;
 }
 
 .navbar__hamburger__menu ul li a {
     color: #1e1e1e;
     text-decoration: none;
-    padding: 8px 16px;
+    padding: 8px 8px;
     display: block;
     transition: background-color 0.3s ease;
+}
+
+.navbar__hamburger__menu .fab {
+    margin-right: 8px;
 }
 
 .navbar__hamburger__menu ul li a:hover {
