--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -33,7 +33,6 @@
     justify-content: center;
     align-items: center;
     flex-grow: 1;
-    /* Ensures links take remaining space */
 }
 
 .navbar__links a {
@@ -51,7 +50,7 @@
     padding: 8px 16px;
     border: none;
     border-radius: 12px;
-    background-color: #740F35;
+    background-color: #740f35;
     color: white;
     font-family: "Fredoka";
     font-size: 1rem;
@@ -69,7 +68,6 @@
     position: absolute;
     top: 100%;
     left: 50%;
-    /* Center horizontally */
     transform: translateX(-50%);
     background-color: white;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
@@ -129,26 +127,31 @@
 .navbar__hamburger__menu {
     position: absolute;
     top: 10vh;
-    /* Adjust as needed */
-    right: 24px;
-    /* Adjust as needed */
-    background-color: white;
-    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
-    border-radius: 12px;
-    padding: 8px;
-    z-index: 10;
-    display: none;
+    right: 0;
+    background-color: burlywood;
+    width: 100%;
+    height: 90vh;
+    z-index: 5;
+    opacity: 0;
+    transition: opacity 0.3s ease;
 }
 
 .navbar__hamburger__menu ul {
     list-style: none;
     padding: 0;
     margin: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 90%;
 }
 
 .navbar__hamburger__menu ul li {
-    margin-bottom: 8px;
-    padding-inline: 8px;
+    margin-bottom: 32px;
+    padding: 24px;
+    width: max-content;
+    font-size: 1.5rem;
 }
 
 .navbar__hamburger__menu ul li a {
@@ -164,8 +167,13 @@
 }
 
 .navbar__hamburger__menu ul li a:hover {
-    background-color: #f0f0f0;
+    text-decoration: underline;
 }
+
+.navbar__hamburger__menu.open {
+    opacity: 1;
+}
+
 
 @media screen and (max-width: 1080px) {
     .logo {
