--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -37,13 +37,11 @@
 
 .navbar__links a {
     margin: 0 12px;
-    position: relative;
 }
 
 .navbar__contact {
     display: flex;
     align-items: center;
-    position: relative;
 }
 
 .navbar__contact button {
@@ -58,8 +56,7 @@
     transition: border-radius 0.3s ease;
 }
 
-.navbar__contact:hover button,
-.navbar__contact__social:hover button {
+.navbar__contact:hover button {
     border-radius: 12px 12px 0 0;
 }
 
@@ -70,7 +67,7 @@
     left: 50%;
     transform: translateX(-50%);
     background-color: white;
-    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     border-radius: 0 0 12px 12px;
     padding: 8px;
     z-index: 10;
@@ -92,9 +89,8 @@
 .navbar__contact__social ul li a {
     color: #9f8d8d;
     font-size: 1rem;
-    margin: 0;
-    display: block;
     padding: 5px 0;
+    display: block;
 }
 
 .navbar__contact__social ul li a:hover {
@@ -159,21 +155,17 @@
     text-decoration: none;
     padding: 8px 8px;
     display: block;
-    transition: background-color 0.3s ease;
-}
-
-.navbar__hamburger__menu .fab {
-    margin-right: 8px;
+    transition: font-size 0.3s ease, letter-spacing 0.3s ease;
 }
 
 .navbar__hamburger__menu ul li a:hover {
-    text-decoration: underline;
+    letter-spacing: 6px;
+    font-size: 2rem;
 }
 
 .navbar__hamburger__menu.open {
     opacity: 1;
 }
-
 
 @media screen and (max-width: 1080px) {
     .logo {
@@ -194,12 +186,11 @@
     margin-top: 5px;
     right: 0;
     background: #1e1e1e;
-    transition: width 0.3s ease, right 0.3s ease;
+    transition: width 0.3s ease;
 }
 
 .navbar__links a:hover::after {
     width: 100%;
-    right: 0;
 }
 
 @media screen and (max-width: 768px) {
