--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -129,7 +129,13 @@
     height: 90vh;
     z-index: 5;
     opacity: 0;
-    transition: opacity 0.3s ease;
+    filter: blur(8px);
+    transition: opacity 0.3s ease, filter 0.3s ease;
+}
+
+.navbar__hamburger__menu.open {
+    opacity: 1;
+    filter: blur(0px);
 }
 
 .navbar__hamburger__menu ul {
@@ -161,10 +167,6 @@
 .navbar__hamburger__menu ul li a:hover {
     letter-spacing: 6px;
     font-size: 2rem;
-}
-
-.navbar__hamburger__menu.open {
-    opacity: 1;
 }
 
 @media screen and (max-width: 1080px) {
