--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -63,18 +63,67 @@
 .navbar__contact button {
     padding: 8px 16px;
     border: none;
+    outline: none;
     border-radius: 12px;
     background-color: #740f35;
     color: white;
     font-family: "Fredoka";
     font-size: 1rem;
     cursor: pointer;
-    transition: background-color 0.3s ease;
+    position: relative;
+    z-index: 0;
+    border-radius: 10px;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+    transition: transform 0.3s ease, box-shadow 0.3s ease,outline 0.3s ease;
 }
 
 .navbar__contact button:hover {
-    background-color: #a00f35;
+    outline: whitesmoke solid 1px;
 }
+
+.navbar__contact button:before {
+    content: "";
+    background: linear-gradient(
+      45deg,
+      #bd6348,
+      #d19a66,
+      #facfaa,
+      #c99d74
+    );
+    position: absolute;
+    top: -2px;
+    left: -2px;
+    background-size: 200%;
+    z-index: -1;
+    filter: blur(5px);
+    -webkit-filter: blur(5px);
+    width: calc(100% + 4px);
+    height: calc(100% + 4px);
+    transition: opacity 0.3s ease-in-out, background-size 0.3s ease;
+    opacity: 0;
+    border-radius: 10px;
+}
+
+.navbar__contact button:after {
+    z-index: -1;
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: #740f35;
+    left: 0;
+    top: 0;
+    border-radius: 10px;
+}
+
+.navbar__contact button:hover:before {
+    opacity: 1;
+    background-size: 400%;
+    animation: glowing-button-85 20s linear infinite;
+}
+
 
 .logo {
     display: block;
@@ -164,3 +213,15 @@
         display: block;
     }
 }
+
+@keyframes glowing-button-85 {
+    0% {
+      background-position: 0 0;
+    }
+    50% {
+      background-position: 200% 0;
+    }
+    100% {
+      background-position: 0 0;
+    }
+  }
